// Notification Module - logical schema (lược đồ logic) aligned with current repo truth (hiện trạng repo)
// Note:
// - push_jobs là control-plane record (bản ghi điều phối) cho async dispatch (gửi bất đồng bộ).
// - Email delivery hiện đi qua queue/job path, chưa có canonical email history table (bảng lịch sử email gốc) trong current scope (phạm vi thiết kế hiện tại).

Project notification_module {
  database_type: "PostgreSQL"
  Note: '''
  Notification module cho PMTL_VN.
  Ghi nhớ:
  - push_subscriptions = trạng thái đăng ký nhận push.
  - push_jobs = record điều phối gửi.
  - đây chưa phải inbox của người dùng.
  '''
}

Enum push_job_status {
  queued
  active
  completed
  failed
}

Enum practice_reminder_source_type {
  daily_practice
  vow_milestone
  life_release_day
  baihua_night_reading
}

Table users {
  id uuid [pk]
  public_id varchar [unique]
  email varchar
  role varchar
}

Table push_subscriptions {
  id uuid [pk]
  public_id varchar [unique]
  user_id uuid [ref: > users.id]
  endpoint text [not null]
  p256dh text
  auth text
  timezone varchar
  is_active bool [default: true]
  failed_count int [default: 0]
  pref_posts bool [default: true]
  pref_events bool [default: true]
  pref_community bool [default: false]
  quiet_hours_from varchar
  quiet_hours_to varchar
  last_sent_at timestamp
  last_error varchar
  created_at timestamp
  updated_at timestamp
}

Table push_jobs {
  id uuid [pk]
  public_id varchar [unique]
  kind varchar [not null]
  status push_job_status [not null]
  chunk_size int [default: 100]
  message text
  url varchar
  tag varchar
  payload jsonb
  cursor int [default: 0]
  sent_count int [default: 0]
  failed_count int [default: 0]
  error_summary text
  started_at timestamp
  finished_at timestamp
  created_at timestamp
  updated_at timestamp
}

Table reminder_schedules {
  id uuid [pk]
  public_id varchar(32) [not null, unique]
  user_id uuid [not null, ref: > users.id, note: "Ref (tham chiếu) tới 00-identity.users"]
  source_type practice_reminder_source_type [not null]
  source_ref varchar(64)
  schedule_key varchar(128) [not null]
  timezone varchar(64) [not null]
  next_run_at timestamptz
  dedupe_window_minutes int [not null, default: 60]
  is_active boolean [not null, default: true]
  created_at timestamptz [not null]
  updated_at timestamptz [not null]

  Indexes {
    (user_id, schedule_key) [unique]
  }

  Note: "Reminder schedule (lịch nhắc việc) dùng khi pushJobs đơn thuần chưa đủ diễn đạt rule lặp lại."
}

TableGroup "Notification Recipients" [note: "Ai có thể được gửi tới"] {
  users
  push_subscriptions
}

TableGroup "Notification Control Plane" [note: "Điều phối gửi bất đồng bộ"] {
  push_jobs
  reminder_schedules
}
